# Property_Chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
Data/RentRoll_LeaseCharges_NamesRedacted copy/: Apr_RENT_ROLL_WITH_LEASE_CHARGES_115r.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_126a.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_126r.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_134c.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_134land.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_134r.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_138a.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_138r.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_139c.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_139r.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_143a.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_143c.xls  Apr_RENT_ROLL_WITH_LEASE_CHARGES_144r.xls  (+287 more)
app/: __init__.py  main.py  schemas.py
config/: property_sources.json
docs/: evals.md  frontend-ui.md  langchain-orchestration.md  retrieval-ingestion.md  structured-data-load.md  unstructured-source-plan.md
evals/: chat_cases.json  golden_cases.json  golden_report.json  llm_judge_report.json  local_llm_judge_report.json  retrieval_cases.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: ingest_unstructured.py  load_rent_roll_mysql.py  run_golden_evals.py  run_llm_judge_evals.py  scrape_property_sites.py  search_unstructured.py
sql/: schema.sql
tests/: conftest.py  test_chat_orchestrator.py  test_llm_judge_metrics.py  test_llm_planner.py  test_property_scope_note.py  test_retrieval_scope.py  test_sql_approval.py  test_structured_tools.py
(+27 files in other folders)
