[project]
name = "aker-property-assistant"
version = "0.1.0"
description = "Property-scoped AI assistant prototype for structured rent-roll data and scraped property content."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.57.1",
  "chromadb>=1.0.15",
  "fastapi>=0.116.1",
  "langchain>=1.3.1",
  "langchain-anthropic>=1.4.3",
  "langchain-openai>=1.2.2",
  "mysql-connector-python>=9.3.0",
  "openai>=1.97.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "sentence-transformers>=5.5.1",
  "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.12.5",
]

[project.scripts]
aker-api = "app.main:run"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["Data*", "config*", "docs*", "scripts*", "sql*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
